--- a/index.jade
+++ b/index.jade
@@ -5,6 +5,7 @@ html
     body
         header 
             | SITW membership
+            img(src="./logo/sitw-logo-03.png")
         main#membership
 
 
