--- a/index.jade
+++ b/index.jade
@@ -1,11 +1,18 @@
 html
     head
         link(href="./css/index.css", rel="stylesheet", type="text/css")
-        
+        link(href='http://fonts.googleapis.com/css?family=Kite+One', rel='stylesheet', type='text/css')
+        script(src="./js/index.js")
+        script(src="./js/jquery-1.10.2.min.js")
     body
         header 
-            | SITW membership
-            img(src="./logo/sitw-logo-03.png")
+            div.header-container
+                div.header-left
+                    img(src="./logo/sitw-logo-03.png")
+                    |SITW membership
+                div.header-right
+                    div.choice
+
         main#membership
 
 
@@ -16,38 +23,15 @@ html
 
             <section>
                 <div class="picture">
-                    <img src="http://avatars.io/facebook/{{facebook-id}}?size=large" width="200">
+                    <div class='picture-top'>
+                        {{name}}
+                    </div>
+                    <div class='picture-bottom'>
+                        <img src="http://avatars.io/facebook/{{facebook-id}}?size=large" width="200">
+                    </div>
                 </div>
 
-                <div class="personal_info">
-                    <li>
-                        name: {{name}}
-                    </li>
-                    <li>
-                        email: {{email}}
-                    </li>
-                    <li>
-                        github-id: {{github-id}}
-                    </li>
-                    <li>
-                        twitter-id: {{twitter-id}}
-                    </li>
-                    <li>
-                        facebook-id: {{facebook-id}}
-                    </li>
-                    <li>
-                        department: {{department}}
-                    </li>
-                    <li>
-                        class: {{class}}
-                    </li>
-                    <li>
-                        skill: {{skill}}
-                    </li>
-                    <li>
-                        description: {{description}}
-                    </li>
-                </div>
+
                 <div class="personal_clear">
                 </div>
 
@@ -56,7 +40,6 @@ html
         script.
             $(document).ready(function(){
                 $.getJSON('./member.json', function(data){
-
                     console.log(data)
 
                         var source   = $("#entry-template").html()
@@ -70,8 +53,18 @@ html
                             $('#membership').append(html)
 
                         };
+                });
+            });
+            $(document).ready(function() {
+                $(".picture").on("mouseenter",function(){
+                    $(this).css({"width":"1000px","height":"1000px","-webkit-border-radius":"500px","border-radius":"500px"
+                    });
                 })
-            })
+                .on("mouseleave",function(){
+                    $(this).css({"width":"250px","height":"250px","-webkit-border-radius":"125px","border-radius":"125px"
+                    });
+                })
+            });
 
 
 
