--- a/index.jade
+++ b/index.jade
@@ -1,5 +1,7 @@
 html
     head
+        title
+            |SITW membership
         link(href="./css/index.css", rel="stylesheet", type="text/css")
         link(href='http://fonts.googleapis.com/css?family=Kite+One', rel='stylesheet', type='text/css')
         script(src="./js/jquery-1.10.2.min.js")
