--- a/index.jade
+++ b/index.jade
@@ -40,9 +40,9 @@ html
                             School
                         </div>
                         <div class='word2'>
-                            NCKU {{department}} {{class}}
+                            {{school}} {{department}} {{class}}
                         </div>
-                    </li>
+                    </li>   
                     <li>
                         <div class='word1'>
                             Skill
