--- a/index.jade
+++ b/index.jade
@@ -21,6 +21,8 @@ html
 
 
         footer
+            | &copy Copyright 
+            a(href="http://www.sitw.tw", target="_blank") SITW
         script(src="./js/zepto.min.js")
         script(src="./js/handlebars.js")
         script(id="entry-template", type="text/x-handlebars-template").
