modify some word

--- a/index.jade
+++ b/index.jade
@@ -20,9 +20,8 @@ html
         main#membership
 
 
-        footer
-            | &copy Copyright 
-            a(href="http://www.sitw.tw", target="_blank") SITW
+        footer 
+            | Copyright &copy 2013 SITW All Rights Reserved.
         script(src="./js/zepto.min.js")
         script(src="./js/handlebars.js")
         script(id="entry-template", type="text/x-handlebars-template").
@@ -55,7 +54,7 @@ html
                     </li>
                     <li>
                         <div class='word1'>
-                            <span class='word1-1'>Disctiption</span>
+                            <span class='word1-1'>Desctiption</span>
                         </div>
                         <div class='word2'>
                             {{description}}
