--- a/index.jade
+++ b/index.jade
@@ -54,7 +54,7 @@ html
                     </li>
                     <li>
                         <div class='word1'>
-                            <span class='word1-1'>Desctiption</span>
+                            <span class='word1-1'>Description</span>
                         </div>
                         <div class='word2'>
                             {{description}}
