--- a/index.jade
+++ b/index.jade
@@ -7,12 +7,16 @@ html
         script(src="./js/jquery-1.10.2.min.js")
         script(src="./js/index.js")
         link(rel="shortcut icon",type="image/x-icon",href="logo/favicon.ico")
+        link(href='http://fonts.googleapis.com/css?family=Alegreya+SC', rel='stylesheet', type='text/css')
+
     body
         header 
             div.header-container
                 div.header-left
                     img(src="./logo/sitw-logo-03.png")
-                    |SITW membership
+                    |SITW 
+                    span.mem
+                        |membership
                 div.header-right
                     div.choice
                         a(href="http://www.sitw.tw", target="_blank") HOME
