--- a/css/index.css
+++ b/css/index.css
@@ -93,17 +93,17 @@ section {
 }
 .info-left .head{
 	margin-top: -36px;
+	margin-right: auto;
+	margin-left: auto;
 	text-align: center;
+	width: 150px;
+	height: 150px;
+	overflow: hidden;
+ 	-moz-border-radius: 75px; 
+ 	-webkit-border-radius: 75px; 
+ 	border-radius: 75px;
 }
 
-.info-left img{
-   	width: 150px;
-  	height: 150px;
-   	-moz-border-radius: 75px; 
-   	-webkit-border-radius: 75px; 
-   	border-radius: 75px;
-
-}
 .info-middle{
 	list-style: none;
 	font-family: 'Kite One', sans-serif;
